--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "docker-start-db": "docker compose -f docker-compose.dev.yml up -d",
+    "docker-close-db": "docker compose -f docker-compose.dev.yml down --volumes"
   },
   "dependencies": {
     "cors": "^2.8.5",
