--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -2,5 +2,6 @@ FROM node:16.13.0 AS build-stage
 WORKDIR /usr/src/app
 COPY . .
 ENV REACT_APP_BACKEND_URL=http://localhost:3001
-RUN npm ci --only=production
+RUN npm ci 
+RUN CI=true npm test
 RUN npm run build
