complete 12.16 - add dev,Dockerfile to containerize backend. adjust ports so that backend runs with redis and mongo in container

--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -1,6 +1,7 @@
 version: '3.8'
-
+#for running inside container
 services:
+ 
   mongo:
     image: mongo:4.4.6
     ports:
@@ -17,3 +18,20 @@ services:
     command: ['redis-server', '--appendonly', 'yes']
     volumes:
       - ./redis_data:/data
+  
+  server:
+    image: backend-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3001:3000
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+    container_name: todos-backend-dev
+
+  debug-helper:
+    image: busybox
