--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -3,12 +3,44 @@
       image: frontend-dev
       build:
         context: .
-        dockerfile: dev.Dockerfile
+        dockerfile: ./todo-frontend/dev.Dockerfile
       volumes:
         - ./todo-frontend/:/usr/src/app
       ports:
         - 3000:3000
       container_name: todos-frontend-dev-proxy
+    mongo:
+        image: mongo:4.4.6
+        ports:
+          - 3456:27017
+        environment:
+          MONGO_INITDB_DATABASE: the_database
+        volumes: 
+          - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+          - ./todo-backend/mongo_data:/data/db
+    redis:
+      image: redis
+      ports:
+        - 6379:6379
+      command: ['redis-server', '--appendonly', 'yes']
+      volumes:
+        - ./todo-backend/redis_data:/data
+    
+    server:
+      image: backend-dev
+      build:
+        context: .
+        dockerfile: ./todo-backend/dev.Dockerfile
+      volumes:
+        - ./todo-backend/:/usr/src/app
+      ports:
+        - 3001:3001
+      environment:
+        - REDIS_URL=redis://redis:6379
+        - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+        - PORT=3001
+      container_name: todos-backend-dev-proxy
+
     nginx:
       image: nginx:1.20.1
       volumes:
@@ -18,3 +50,4 @@
       container_name: reverse-proxy
       depends_on:
        - app
+       - server
