--- a/todo-app/nginx.conf
+++ b/todo-app/nginx.conf
@@ -17,8 +17,8 @@ http {
       proxy_pass http://app:3000;
     }
 
-    location /api/ {
-        proxy_pass http://server:3001/;
-    }
+   # location /api/ {
+   #     proxy_pass http://server:3001/;
+  #  }
   }
 }
