--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:16.13.0 AS build-stage
+FROM node:16.13.0 
 WORKDIR /usr/src/app
 COPY . .
 ENV REACT_APP_BACKEND_URL=http://localhost:3001
 RUN npm ci 
 RUN CI=true npm test
 RUN npm run build
+CMD [ "npm", "start" ]
